# egdk-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/sprites/: sprites.eproject
examples/sprites/Content/: JG_Color.jsonConfig
examples/sprites/Content/source/: TilingSprite.lua  game.h
img/: browser_ui_002.xcf  egdk_ui_001.xcf
resource/: logo.xcf
src/editor/: CMakeLists.txt
src/editor/src/: editor-browser.c  editor-browser.h  editor-gui-browser.c  editor-gui-browser.h  egdk-editor.c  panel-tool.c  panel-tool.h  single-file.c  single-file.h  ui-docked-browser.c  ui-docked-browser.h  ui-docked-hierarchy.c  ui-docked-hierarchy.h  ui-docked-inspector.c  ui-docked-inspector.h  ui-docked-viewport.c  ui-docked-viewport.h  ui-editor-main.c  ui-editor-main.h  ui-editor-menubar.c  ui-editor-menubar.h
src/editor/src/level-editor/: level-editor.c  level-editor.h
src/editor/src/level-editor/browser/: browser.h  browserContent.c  browserContent.h  browserViewContent.c  browserViewContent.h  browserViewFileType.c  browserViewFileType.h  docked-browser.c
src/editor/src/level-editor/gtk-renderer-embed/: gtk-renderer-embed.c  gtk-renderer-embed.h
src/editor/src/level-editor/tiled/: docked-tiled.c  tiled.h
src/editor/src/level-editor/toolbar_main/: toolbar.h  ui-toolbar.c
src/editor/src/level-editor/viewport/: docked-viewport.c  viewport.h
src/game/: CMakeLists.txt
src/game/src/: egdk-game.c
src/renderer/: renderer.c  rmath.c  rshape.c  rtransform.c
src/utility/: file_fn.h  path_fn.h  string_fn.h
